fix (#50): Suggestions hidden on mobile

--- a/src/.vuepress/theme/styles/mobile.styl
+++ b/src/.vuepress/theme/styles/mobile.styl
@@ -6,7 +6,6 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
 @media (max-width: $MQNarrow)
   .sidebar
     font-size 15px
-    width $mobileSidebarWidth
   .page
     padding-left $mobileSidebarWidth
 
